<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnlanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_type_nomal"
            android:padding="10dp"
            android:text="@string/main_language"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/onlinecheck"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tonlinecheck"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="offline"
                android:textSize="12sp"
                android:textStyle="bold"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_id"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editID"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/viewPassoword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_pwd"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="250sp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/SaveCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/white" />

            <TextView
                android:id="@+id/TVSaveCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_stay_logged"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="150dp"
                android:layout_height="50sp"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_type_nomal"
                android:padding="6dp"
                android:text="@string/main_ok"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnback"
                android:layout_width="150dp"
                android:layout_height="50sp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/button_type_nomal"
                android:padding="6dp"
                android:text="@string/main_cancel"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_ver"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="bottom"
        android:layout_marginRight="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:hint="VERSION"
        tools:ignore="RtlCompat" />
</LinearLayout>